# virtual-dom

./: README.md  rebuild.sh  stack.yaml  virtual-dom.cabal
examples/: Main.hs
jsbits/: before.js  virtual-dom-out.js  virtual-dom-wrapper.js
sketch/: API.md
src/Web/: VirtualDom.hs
src/Web/VirtualDom/: Html.hs  Svg.hs
src/Web/VirtualDom/Html/: Attributes.hs  Events.hs
src/Web/VirtualDom/Svg/: Attributes.hs  Events.hs
